public enum SFXNAME
{
	infinitelyloudsilenceils74283,
	HeavyBreath,
	MantleIdle,
	swordstabpushmeleeweapon236206,
	TaserGunSFX,
	MissMark,
	LockOnVver2,
	LockonFail,
	Minigame_Disarm_Activation,
	Minigame_Disarm_Fizzle,
	Minigame_Disarm_ScreenShowupVer2,
	LaserSound,
	Minigame_Project_Image_EnergyMeter,
	Minigame_Project_Image_ImageFlashing,
	Minigame_Project_Image_LightValveOFF,
	Minigame_Project_Image_LightValveON,
	Minigame_WindAttack_AirBurst,
	Minigame_WindAttack_FanSpinningver2,
	Minigame_WindAttack_Overheated,
	Minigame_WindAttack_Overheating,
	OldPageflip,
	Activation1_1,
	Activation2_1,
	Activation3_1,
	Boxnew,
	CityAmbience,
	flyver8,
	flyver9,
	FlyV2,
	FootStep,
	Gloves,
	HeartHum1,
	HeartInstall,
	MantleFinalSound,
	Pageflip,
	Page,
	WatchAlert,
	MantleMainMenu_TEMP_LOOP,
	MasterMainMenu,
	SplashScreen,
	MantleCreditsBODY,
	MantleCreditsHEAD1,
	MantleCreditsHEAD2,
	MantleCreditsHEAD3,
	MantleCreditsHEAD4,
	MantleCreditsINTRO,
	LoseMantleEndBODY,
	LoseMantleEndHEAD,
	WinMantleEndBODY,
	WinMantleEndHEAD,
	MantleMainMenuBODY,
	MantleMainMenuHEAD,
	Alert,
	Babble,
	DateFlySFX,
	Email,
	GlassShatter,
	Glitch,
	MessageAlert,
	mumble,
	SciFiTakeOff,
	ScreenShatter,
	Sword2,
	Sword3,
	Sword,
	Typing,
	ChoosingMinigame,
	CoreButton,
	EndAnimStab,
	EndAnimTaser,
	GridDotMoving,
	MainMenu,
	PanelClose,
	PanelOpen,
	PauseMenu,
	Scan,
	WireClose,
	WireOpen,
	Explosion,
	HospitalDestroyed,
	Pulsing,
	VyzzarExplosion,
	VyzzarPulsing,
	MantleAceBODYALT,
	MantleAceBODY,
	MantleAceHEAD,
	MantleAceINTRO,
	CecilBodyLoop,
	CecilIntroLoop,
	MantleHarbringerBODY,
	MantleHarbringerHEAD,
	MantleHarbringerINTRO,
	VyzzarBodyLoop,
	VyzzarHead,
	VyzzarIntroLoop,
	MantleHit,
	HitMark,
	LockOnH,
	LargeRingProjectile,
	MainProjectile,
	MidRingProjectile,
	AceRepair,
	CecilRepair,
	EnagaRepair,
	HarbingerRepair,
	QuincyRepair,
	VyzzarRepair,
	Stickygooclose,
	Stickygooopen,
	StickyGoo,
	OverheatAlarm,
	Overheated,
	Turbine,
}
